assets/main.scss
/* Standard */

* {
  margin: 0px;
  padding: 0px;
  box-sizing:border-box;
  -webkit-tap-highlight-color: transparent;
}

html {
  background: $white;
  scroll-behavior: smooth;
}

body {
  padding: 0;
  font-family: $font-family-main, sans-serif;
}

body,
body.light {
  color: $black;
  background: $white;
}

body.dark {
  background-color: $black;
  color: $white;
}

p code {
  background: rgba($gray, 1);
  padding: 0 6px;
  border-radius: $br-xs;
  display: inline-block;
  font-weight: bold;
}

.dark {
  p code {
    background: rgba($white, .2);
  }
}

/* Button */

@property --gradient_rotate {
syntax: "<angle>";
initial-value: 0deg;
inherits: false;
}  

.dark {
  button,
  .button {
      color: $black;
      background: rgba($white,0.9);
      border: 1px solid rgba($white, 0.2);

      svg path {
        fill: $white;
      }
      
      &.blue {
        background: transparent;
        border: 1px solid rgba($white, 0.2);
        box-shadow: none;
        color: $white;
      }

      &.primary {
        color: $white;

        &:hover {
          border: $border-hover;
        }
      }

      &:hover {
          background: $white;
          color: $black;
          transform: scale(1.05);
      }

      &.large {
        padding: $spacing-sm $spacing-md;
        font-size: 16px;
      }
  }
}

button,
.button {
    color: $white;
    background: rgba($black,0.9);
    backdrop-filter: blur(4px);
    border-radius: $br-sm;
    border: 1px solid rgba($black, 0.2);
    text-align: center;
    text-decoration: none;
    padding: 12px $spacing-sm 10px;
    cursor: pointer;
    font-size: $font-size-md;
    margin:0;
    font-weight: normal;
    font-family: $font-family-main;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
    
    &.blue {
      background: rgba($black, 0);
      box-shadow: none;
      color: $black;
    }

    &.white {
      background: rgba($white, 1);
      box-shadow: none;
      color: $black;

      &:hover {
        background: $white;
        color: $black;
      }
    }

    &.primary {
      color: $white;

      &:hover {
        border: $border-hover;
      }
    }

    &:hover {
        background: $black;
        color: $white;
        transform: scale(1.05);
    }

    &.large {
      padding: $spacing-sm $spacing-md;
      font-size: $font-size-md;

      @media screen and (max-width: 768px) {
        padding: 12px $spacing-sm 10px;
      }
    }

    &.small {
      padding: $spacing-xs $spacing-sm;
      font-size: $font-size-sm;
    }
}

@keyframes button_gradient_rotate{
  from { --gradient_rotate: 0deg;  }
  to   { --gradient_rotate: 360deg;} 
} 


/* Typography */

.teal { color:$teal }
.green { color:$green }
.blue { color:$blue }
.mint { color:$mint }
.red { color:$red }
.purple { color:$purple }

a {
  color:$blue;
  transition: color 0.28s ease-in-out;
}

.dark a {
  color: $blue-light;
}

h1, h2, h3, h4 {
  font-family: $font-family-main;
  font-weight: 500;
  margin: 0;
  padding: 0;
}

h5, h6 {
  font-family: $font-family-secondary;
  font-weight: 500;
  margin: 0;
  padding: 0;
}

h1 { 
  font-size: $font-size-max;
  line-height: $font-size-max; 
  margin-top: 0;
  margin-bottom: 0;
  padding:0.5rem 0;
  line-height: 120%;

  @media screen and (max-width: 1200px) {
    font-size: calc($font-size-xxl * 1.4);
    line-height: 100%;
  }

}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

h2 { 
  font-size: $font-size-xxl;
  line-height: $font-size-xxl;
  margin-bottom: $spacing-md;
  font-weight: 500;

  @media screen and (max-width: 1000px) {
    font-size: $font-size-xl;
  }

}

.content h2 {
  margin: $spacing-lg auto $spacing-md;
}

h3 { 
  font-size: $font-size-lg * 1.2; 
  line-height: 140%; 
  margin-top: $spacing-lg;
  margin-bottom: $spacing-sm;
  font-weight: 500;

  @media screen and (max-width: 1000px) {
    font-size: $font-size-lg;
    line-height: $font-size-lg * $multiplier;
  }
}

h4 { 
  font-size: $font-size-lg;
  line-height: 110%;  
  margin: $spacing-md 0 $spacing-sm;

  .highlight {
    color: $red-dark;
  }

  @media screen and (max-width: 1000px) {
    font-size: $font-size-md; 
    line-height: $font-size-md * $multiplier;
  }
}

.article-extras .section-title h1 {
  text-align: center;
  line-height: 120%;
}

.article-extras .section-title h4 {
  margin-top: 0;
  font-size: $font-size-md;
  opacity: 0.5;
}

h5 { 
  font-size: $font-size-sm; 
  font-weight: bold;
  line-height: $font-size-md * $multiplier; 
  font-family: $font-family-main;
  margin-bottom: $spacing-xs;
  line-height: $spacing-md;

  @media screen and (max-width: 1000px) {
    font-size: $font-size-xs;
    line-height: $font-size-sm * $multiplier;
  }
}

p { 
  font-size: $font-size-md;
  line-height: $font-size-md * $multiplier; 
  font-family: $font-family-secondary, sans-serif;
  margin-bottom: 1rem;
  opacity: 0.7;

  @media screen and (max-width: 1000px) {
    font-size: $font-size-sm;
    line-height: $font-size-sm * $multiplier;
  }

}

li { 
  font-size: $font-size-md;
  line-height: $font-size-md * $multiplier; 
  font-family: $font-family-secondary, sans-serif;
  line-height: $spacing-md;

  @media screen and (max-width: 1000px) {
    font-size: $font-size-sm;
    line-height: $font-size-sm * $multiplier * 1.4;
  }

}

.code-type {
  margin: $spacing-md 0 0;
  text-align: left;
  width: 100%;
  font-size: $font-size-md;
  font-weight: 600;
  opacity: 0.6;
}
/* ... */

